@@ -9,6 +9,8 @@ PHP                                                                        NEWS
   . Fixed bug #67314 (Segmentation fault in gc_remove_zval_from_buffer).
     (Dmitry)
   . Fixed bug #68652 (segmentation fault in destructor). (Dmitry)
+  . Fixed bug #69419 (Returning compatible sub generator produces a warning).
+    (Nikita)
 
 - cURL:
   . Fixed bug #68739 (Missing break / control flow). (Laruence)
